Fix Squad Bullet Point Spacing

--- a/css/index.style.css
+++ b/css/index.style.css
@@ -515,6 +515,8 @@ html, body {
     font-size: 1.5vw;
     font-weight: 200;
     gap: 1em;
+    padding-left: 2em;
+    padding-right: 3em;
 }
 
 #Projects-Title{
